# libmath

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.in  niceprint.mak
doc/: Makefile.am  doxygen.conf.in
examples/: Makefile.am  d1.cpp  d2.cpp  e1.cpp  f1.cpp  i1.cpp  i2.cpp  r1.cpp  s1.cpp
math++/: .matcher.tcc.swp  Makefile.am  calculator.h  calculator.tcc  derive.h  derive.tcc  error.h  expander.h  expander.tcc  library.h  library.tcc  matcher.h  matcher.tcc  nodes.h  nodes.tcc  printer.h  printer.tcc  reader.h  reader.tcc  simplifier.h  simplifier.tcc  t1.cpp  utils.cpp  utils.h  utils.tcc  visitor.h
