AC_INIT(math++/reader.tcc)

MATH_MAJOR_VERSION=0
MATH_MINOR_VERSION=0
MATH_MICRO_VERSION=3

MATH_VERSION=$MATH_MAJOR_VERSION.$MATH_MINOR_VERSION.$MATH_MICRO_VERSION
MATH_VERSION_INFO=`expr $MATH_MAJOR_VERSION + $MATH_MINOR_VERSION`:$MATH_MICRO_VERSION:$MATH_MINOR_VERSION
MATH_VERSION_NUMBER=`expr $MATH_MAJOR_VERSION \* 10000 + $MATH_MINOR_VERSION \* 100 + $MATH_MICRO_VERSION`

AC_SUBST(MATH_MAJOR_VERSION)
AC_SUBST(MATH_MINOR_VERSION)
AC_SUBST(MATH_MICRO_VERSION)
AC_SUBST(MATH_VERSION)
AC_SUBST(MATH_VERSION_INFO)
AC_SUBST(MATH_VERSION_NUMBER)

VERSION=${MATH_VERSION}

AM_INIT_AUTOMAKE(libmath++, $VERSION)

AM_CONFIG_HEADER(config.h)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_STDC_HEADERS
AC_CHECK_HEADERS(string cstring)

AC_OUTPUT([
    Makefile
    math++/Makefile
    examples/Makefile
    doc/Makefile
    doc/doxygen.conf
])
