#include $(top_srcdir)/niceprint.mak

AM_CXXFLAGS = -pedantic -ansi -Wall -Wno-long-long

LIBS = ../math++/libmath++.la

noinst_PROGRAMS = e1 r1 d1 d2 i1 i2 s1 f1

e1_SOURCES = e1.cpp
r1_SOURCES = r1.cpp
d1_SOURCES = d1.cpp
d2_SOURCES = d2.cpp
i1_SOURCES = i1.cpp
i2_SOURCES = i2.cpp
s1_SOURCES = s1.cpp
f1_SOURCES = f1.cpp
